--- a/password/package.json
+++ b/password/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
     "avataaars": "^1.2.2",
+    "bulma": "^0.9.3",
     "now": "^21.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
